<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup">

    <!--    <ImageView-->
    <!--        android:id="@+id/background"-->
    <!--        android:layout_width="409dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:contentDescription="@string/todo"-->
    <!--        android:scaleType="centerCrop"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.0"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.0"-->
    <!--        app:srcCompat="@drawable/login1" />-->

    <Button
        android:id="@+id/signup3"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_gravity="start"
        android:background="@drawable/rounded_corners"
        android:text="@string/Sign_Up2"
        android:textColor="#FFFFFF"

        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass" />

    <Button
        android:id="@+id/login3"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"

        android:background="@drawable/rounded_corners_1"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/login3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup3" />

    <TextView
        android:id="@+id/SIGNUP"
        android:layout_width="264dp"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="#FF4B20"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="231dp"
        android:layout_height="43dp"
        android:autofillHints=""
        android:backgroundTint="#FF4B20"
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SIGNUP" />

    <EditText
        android:id="@+id/email"
        android:layout_width="231dp"
        android:layout_height="43dp"
        android:autofillHints=""
        android:backgroundTint="#FF4B20"
        android:ems="10"
        android:hint="@string/enter_email_id"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/mobile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/mobile"
        android:layout_width="231dp"
        android:layout_height="43dp"
        android:autofillHints=""
        android:backgroundTint="#FF4B20"
        android:ems="10"
        android:hint="@string/enter_mobile_no"
        android:inputType="phone"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/city"
        android:layout_width="231dp"
        android:layout_height="43dp"
        android:autofillHints=""
        android:backgroundTint="#FF4B20"
        android:ems="10"
        android:hint="@string/enter_city"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobile" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="231dp"
        android:layout_height="43dp"
        android:autofillHints=""
        android:backgroundTint="#FF4B20"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/signup3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city" />


</androidx.constraintlayout.widget.ConstraintLayout>