<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <Button
        android:id="@+id/login2"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_gravity="start"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_corners_1"
        android:backgroundTint="#F44336"
        android:contextClickable="true"
        android:text="@string/login"

        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot" />

    <!--    <ImageView-->
    <!--        android:id="@+id/background"-->
    <!--        android:layout_width="409dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        android:scaleType="centerCrop"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:srcCompat="@drawable/login1"-->
    <!--        android:contentDescription="@string/todo" />-->

    <Button
        android:id="@+id/signup2"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginBottom="88dp"
        android:background="@drawable/rounded_corners_1"
        android:text="@string/Sign_Up"
        android:textAlignment="center"
        android:textColor="#FFFFFF"

        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/LOGIN"
        android:layout_width="268dp"
        android:layout_height="46dp"
        android:layout_marginTop="100dp"

        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#FF4B20"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgot"
        android:layout_width="230dp"
        android:layout_height="28dp"
        android:layout_marginBottom="8dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="#3385FF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/login2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="273dp"
        android:layout_height="39dp"
        android:layout_marginTop="20dp"
        android:text="@string/don_t_have_an_account"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/signup2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login2"
        app:layout_constraintVertical_bias="0.179" />

    <EditText
        android:id="@+id/password"
        android:layout_width="231dp"
        android:layout_height="43dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:backgroundTint="#FF4B20"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/forgot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailid" />

    <EditText
        android:id="@+id/emailid"
        android:layout_width="231dp"
        android:layout_height="43dp"
        android:layout_marginTop="54dp"
        android:autofillHints=""
        android:backgroundTint="#FF4B20"
        android:ems="10"
        android:hint="@string/enter_email_id"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LOGIN" />

</androidx.constraintlayout.widget.ConstraintLayout>