<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firstpage">

    <Button
        android:id="@+id/firstpage_signup"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"

        android:layout_marginBottom="100dp"
        android:background="@drawable/rounded_corners"
        android:linksClickable="true"
        android:longClickable="true"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textColorLink="#E91E63"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstpage_login" />

    <Button
        android:id="@+id/firstpage_login"
        android:layout_width="130dp"
        android:layout_height="50dp"

        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_corners"
        android:linksClickable="true"
        android:longClickable="true"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textColorLink="#E91E63"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/firstpage_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstpage_title" />

    <!--    <ImageView-->
    <!--        android:id="@+id/imageView2"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:contentDescription="@string/todo"-->
    <!--        android:scaleType="centerCrop"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.0"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.0"-->
    <!--        app:srcCompat="@drawable/home" />-->

    <TextView
        android:id="@+id/firstpage_title"
        android:layout_width="334dp"
        android:layout_height="77dp"
        android:layout_marginBottom="50dp"
        android:text="@string/Parkinzo1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/firstpage_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstpage_head" />

    <TextView
        android:id="@+id/firstpage_head"
        android:layout_width="269dp"
        android:layout_height="61dp"
        android:layout_marginTop="25dp"
        android:text="@string/Parkinzo"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/firstpage_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="143dp"
        android:layout_height="151dp"
        android:layout_marginTop="120dp"
        android:background="@color/Black1"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/firstpage_head"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />
</androidx.constraintlayout.widget.ConstraintLayout>